# vaultTrust

./: .env.example  .gitignore  Anchor.toml  SETUP.md  firestore.rules  nabeel.md  package-lock.json  package.json  saad.md  tsconfig.anchor-tests.json
app/: globals.css  layout.tsx  page.tsx
app/api/v1/audit/ledger/: route.ts
app/api/v1/auth/register/: route.ts
app/api/v1/connectors/link/: route.ts
app/api/v1/connectors/summary/: route.ts
app/api/v1/consent/active/: route.ts
app/api/v1/consent/grant/: route.ts
app/api/v1/consent/revoke/: route.ts
app/api/v1/consent/update/: route.ts
app/api/v1/onboarding/: route.ts
app/applicant/: page.tsx
app/audit/: page.tsx
app/connect/: page.tsx
app/consent/active/: page.tsx
app/consent/manage/: page.tsx
app/consent/setup/: page.tsx
app/dashboard/: page.tsx
app/lending/: page.tsx
app/login/: page.tsx
app/onboarding/: page.tsx
app/profile/: page.tsx
app/signup/: page.tsx
components/: BankSidebar.tsx  DevNav.tsx  FreelancerSidebar.tsx
lib/: adapters.ts  auth_client.ts  auth_helper.ts  consent-ledger-fallback.ts  db.ts  fetch_client.ts  firebase.ts  firebase_admin.ts  kyc.ts  ledger.ts  local_db.json  rate_limiter.ts  scoring.ts  seed.ts  session.ts
lib/blockchain/client/: consent-client.ts  program.ts
lib/blockchain/idl/: vault_trust.json  vault_trust.ts
lib/blockchain/utils/: custodial-wallet.ts  errors.ts  wallet-crypto.ts
programs/vault-trust/: Cargo.toml
programs/vault-trust/src/: lib.rs
scratch/: test-ledger-tamper.ts  test-scoring.ts
tests/: vault-trust.ts
(+3 files in other folders)
